--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,4 @@ set(CMAKE_AUTOMOC ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
-add_executable(helloworld
-    main.cpp
-)
-
-target_link_libraries(helloworld PRIVATE Qt6::Widgets)
+add_subdirectory(src)
