--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(helloworld
+add_executable(invoice
     main.cpp
     invoice_form.cpp
 )
 
-target_link_libraries(helloworld PRIVATE Qt6::Widgets)
+target_link_libraries(invoice PRIVATE Qt6::Widgets)
