--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ add_executable(invoice
     invoice_form.cpp
 )
 
-target_link_libraries(invoice PRIVATE Qt6::Widgets)
+target_link_libraries(invoice PRIVATE Qt6::Widgets Qt6::PrintSupport)
